pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__delta_inspector_no_selection.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Delta Inspector — select a stream table on Dashboard   [Delta SQL]  Auxiliary│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Delta SQL  e-Show DDL ───────────────────────────────────────────────────────┐
│                                                                              │
│ No stream table selected. Press 1 to go to Dashboard, select a table, then   │
│press d.                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
