pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__delta_inspector_with_selection.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Delta Inspector — public.orders_live   [Delta SQL]  Auxiliary Columns  Tab to│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Delta SQL  e-Show DDL ───────────────────────────────────────────────────────┐
│                                                                              │
│ Loading delta SQL…                                                           │
│                                                                              │
│ Press Enter to fetch, or use the CLI:                                        │
│                                                                              │
│   pgtrickle explain orders_live                                              │
│   pgtrickle explain --analyze                                                │
│   pgtrickle explain --operators                                              │
│   pgtrickle explain --dedup                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
