pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__help_overlay_dashboard.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌ Help — Dashboard — press ? or Esc to close ──────────────────────────────────┐
│ Navigation                             Actions                               │
│                                                                              │
│  1        Dashboard                     r        Refresh selected            │
│  2        Detail view                   R        Refresh all                 │
│  3        Dependency graph              p        Pause selected              │
│  4        Refresh log                   P        Resume selected             │
│  5        Diagnostics                   s / S    Sort / reverse sort         │
│  6        CDC health                    t        Toggle light/dark theme     │
│  7        Configuration                 Ctrl+R   Force poll now              │
│  0        Health checks                 Ctrl+E   Export view to JSON         │
│  9        Alerts                        /        Filter tables               │
│  w        Workers & job queue           :        Command palette             │
│  f        Fuse & circuit breaker        ?        Toggle help                 │
│  m        Watermarks & gating           q        Quit                        │
│  d        Delta SQL inspector           Ctrl+C   Quit                        │
│  g        Graph view                                                         │
│  i        Issues                       Dashboard Tips                        │
│                                                                              │
│  j / ↓    Move down                     / to filter, Enter for detail        │
│  k / ↑    Move up                       s to cycle sort, S to reverse        │
│  Enter    Drill into detail             r to refresh selected, R for all     │
│  Esc      Back / close overlay          EFF column shows cascade staleness   │
│  Tab      Next pane                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
