pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__help_overlay_health.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌ Help — Health Checks — press ? or Esc to close ──────────────────────────────┐
│ Navigation                             Actions                               │
│                                                                              │
│  1        Dashboard                     r        Refresh selected            │
│  2        Detail view                   R        Refresh all                 │
│  3        Dependency graph              p        Pause selected              │
│  4        Refresh log                   P        Resume selected             │
│  5        Diagnostics                   s / S    Sort / reverse sort         │
│  6        CDC health                    t        Toggle light/dark theme     │
│  7        Configuration                 Ctrl+R   Force poll now              │
│  0        Health checks                 Ctrl+E   Export view to JSON         │
│  9        Alerts                        /        Filter tables               │
│  w        Workers & job queue           :        Command palette             │
│  f        Fuse & circuit breaker        ?        Toggle help                 │
│  m        Watermarks & gating           q        Quit                        │
│  d        Delta SQL inspector           Ctrl+C   Quit                        │
│  g        Graph view                                                         │
│  i        Issues                       Health Checks Tips                    │
│                                                                              │
│  j / ↓    Move down                     Overall system health summary        │
│  k / ↑    Move up                       Critical issues need attention       │
│  Enter    Drill into detail                                                  │
│  Esc      Back / close overlay                                               │
│  Tab      Next pane                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
