pgtrickle-tui/src/views/snapshots/pgtrickle__views__snapshot_tests__watermarks_view.snap
---
source: pgtrickle-tui/src/views/mod.rs
expression: output
---
┌ [Tab 1] Watermark Groups (1 groups, 0 gated) — Tab to switch ────────────────────────────────────┐
│Group                 Members     Min Watermark           Max Watermark          Gated            │
│                                                                                                  │
│default               3           2026-04-01 11:59:50     2026-04-01 12:00:00    ✓ No             │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
